updated readme.md to reflect docker_compose setup
also added more explanation of how to use training notebook

--- a/independent_study/Training.ipynb
+++ b/independent_study/Training.ipynb
@@ -546,8 +546,7 @@
    "source": [
     "# Initialize the model\n",
     "\n",
-    "#model_train = models.model()\n",
-    "model_train = \n",
+    "model_train = models.model()\n",
     "adam_optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
     "onset_loss_function = WeightedBinaryCrossEntropy(pos_weight=0.99, neg_weight=0.01)\n",
     "contour_loss_function = WeightedBinaryCrossEntropy(pos_weight=0.99, neg_weight=0.01)\n",
@@ -569,7 +568,7 @@
    "source": [
     "# Save our trained version of the model\n",
     "\n",
-    "model_train.save('saved_models/dec04_train_99posweight')"
+    "model_train.save('saved_models/new_saved_model')"
    ]
   },
   {
@@ -587,7 +586,7 @@
    "outputs": [],
    "source": [
     "# command line execution to output resulting midi from our trained model\n",
-    "!python ../basic_pitch_original/basic_pitch/predict.py --model_path \"saved_models/dec04_train_99posweight_onthefly\" \"model_predictions/our_model/dec04_train_99posweight_onthefly/\" \"model_predictions/_test_audio/MIDI-Unprocessed_Recital1-3_MID--AUDIO_03_R1_2018_wav--5.wav\"\n",
+    "!python ../basic_pitch_original/basic_pitch/predict.py --model_path \"saved_models/new_saved_model\" \"model_predictions/new_models/new_saved_model/\" \"model_predictions/_test_audio/MIDI-Unprocessed_Recital1-3_MID--AUDIO_03_R1_2018_wav--5.wav\"\n",
     "\n",
     "# command line execution to output resulting midi from spotify model for comparison\n",
     "!python ../basic_pitch_original/basic_pitch/predict.py \"model_predictions/spotify_model/\" \"model_predictions/_test_audio/MIDI-Unprocessed_Recital1-3_MID--AUDIO_03_R1_2018_wav--5.wav\""
